Fixes artist images display on mobile

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -336,6 +336,11 @@ label {
   h4 { color: $lightergray; }
 }
 
+.event-artist {
+  width: 400px;
+  margin: 40px auto;
+}
+
 .dollars {
   font-family: 'Helvetica Neue', sans-serif;
   font-weight: 100;
